--- a/README
+++ b/README
@@ -14,6 +14,8 @@ generated code in /Protobuff
 
 
 sample output from app/main is:
+var_dump($protoMsg->serializeToJsonString());
 string(24) "{"age":12,"name":"test"}"
+var_dump($protoMsg->serializeToString());
 string(8)
           ╝test"
